# fastapi_client

./: pyproject.toml
example/client/api/: pet_api.py  store_api.py  user_api.py
example/client/docs/: PetApi.md  StoreApi.md  UserApi.md
openapi-python-templates/: README.mustache  _dataTypeApi.mustache  _dataTypeModel.mustache  api.mustache  model.mustache  setup.mustache
scripts/util/: openapi-generate.sh  postprocess-docker.sh
tests/: test_client.py
