[tool.poetry]
name = "example"
version = "0.3.0"
description = ""
authors = ["David Montague"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.81.0"
pydantic = "*"
httpx = "*"
typing_extensions = "*"

[tool.poetry.dev-dependencies]
starlette = "*"

pytest = "*"
pytest-cov = "*"
coverage = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"

python-multipart = "*"
uvicorn = "*"

[tool.black]
line-length = 120
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
    | pybind11
  )/
)
'''

[tool.isort]
profile = "black"
known_first_party = ["example", "client", "example.client"]
